tests/ui/fmt/incorrect-separator.stderr
error: unknown start of token: \u{326}
  --> $DIR/incorrect-separator.rs:19:28
   |
LL |     format!("A number: {}" ̦ iter::once(42).next().unwrap());
   |                            ^

error: expected `,`, found `.`
  --> $DIR/incorrect-separator.rs:7:27
   |
LL |     format!("A number: {}". iter::once(42).next().unwrap());
   |                           ^ expected `,`

error: expected `,`, found `/`
  --> $DIR/incorrect-separator.rs:12:28
   |
LL |     format!("A number: {}" / iter::once(42).next().unwrap());
   |                            ^ expected `,`

error: expected `,`, found `;`
  --> $DIR/incorrect-separator.rs:15:27
   |
LL |     format!("A number: {}"; iter::once(42).next().unwrap());
   |                           ^ expected `,`

error: expected `,`, found `iter`
  --> $DIR/incorrect-separator.rs:19:30
   |
LL |     format!("A number: {}" ̦ iter::once(42).next().unwrap());
   |                             ^^^^ expected `,`

error: expected `,`, found `.`
  --> $DIR/incorrect-separator.rs:26:17
   |
LL |     format!("{}". compile_error!("fail"));
   |                 ^ expected `,`

error: fail
  --> $DIR/incorrect-separator.rs:26:19
   |
LL |     format!("{}". compile_error!("fail"));
   |                   ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 7 previous errors

